--- a/css/neumorphicLogin.css
+++ b/css/neumorphicLogin.css
@@ -18,7 +18,6 @@ body{
     background-color: #ecf0f3;
 }
 
-
 .login-div{
     width: 430px;
     height: 700px;
@@ -28,3 +27,62 @@ body{
     box-shadow:13px 13px 20px #cbced1,
               -13px -13px 20px #ffffff;
 }
+
+.logo{
+    width:100px;
+    height: 100px;
+    border-radius:50%;
+    margin: 0 auto;
+    box-shadow: 
+    /*logo shadow*/
+    0px 0px 2px #5f5f5f,
+    /*offset*/
+    0px 0px 0px 5px #ecf0f3,
+    /*botom rigth*/  
+    8px 8px 15px #a7aaaf, 
+    /*top left*/   
+    -8px -8px 15px #ffffff;
+    ;
+}
+
+.logo img{
+    width: 100%;
+    height: 100%;
+    border-radius:50%;
+}
+
+.title{
+    text-align: center;
+    font-size: 1.7em;
+    padding-top: 0.8em;
+    letter-spacing: 0.5px;
+}
+
+.sub-title{
+    text-align: center;
+    font-size: 1.2em;
+    padding-top: 0.3em;
+    letter-spacing: 3px;
+}
+
+.fields{
+    width: 100%;
+    padding: 75px 5px 5px 5px;
+}
+
+.fields input{
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+    color:#555;
+    padding: 20px 10px 20px 5px;
+}
+
+.username,.password{
+    margin-bottom: 30px;
+    border-radius: 25px;
+    box-shadow:  inset 8px 8px 8px #cbced1,
+                 inset -8px -8px 8px #ffffff;
+}
+
