--- a/css/neumorphicLogin.css
+++ b/css/neumorphicLogin.css
@@ -86,3 +86,42 @@ body{
                  inset -8px -8px 8px #ffffff;
 }
 
+.svg-icon{
+    height: 22px;
+    margin: 0 10px -3px 25px;
+}
+
+.signin-button{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'lato','sans-serif';
+    text-align: center;
+    color: #ffffff;
+    background-color: #24cfaa;
+    box-shadow: 3px 3px 8px #b1b1b1,
+                -3px -3px 8px #ffffff;
+    transition: 0.5s;
+}
+
+.signin-button:hover{
+    background: #2fdbb6;
+}
+.signin-button:active{
+    background: #1da88a;
+}
+
+.link{
+    padding-top: 20px;
+    text-align: center;
+}
+.link a {
+    text-decoration: none;
+    color: #aaa;
+    font-size: 15px;
+}
