--- a/css/neumorphicLogin.css
+++ b/css/neumorphicLogin.css
@@ -125,3 +125,34 @@ body{
     color: #aaa;
     font-size: 15px;
 }
+
+
+@media (max-width:500px){
+    .login-div{
+        width: 90vw;
+        height: 90vh;
+    }
+    .fields{
+        padding: 4em 0px 0px 0px;
+    }.username,.password{
+        width: 100%;
+        height: 45px;
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        grid-template-rows: 45px;
+        margin-bottom: 2em;
+    }
+    .svg-icon{
+        width: 20px;
+        height: 20px;
+        margin: 10px 10px -3px 15px;   
+    }
+    .signin-button{
+        height: 40px;
+    }
+    .link a {
+        font-size: 10px;
+    }
+    
+    
+}
